--- a/site/src/styles/_variables.css
+++ b/site/src/styles/_variables.css
@@ -2,8 +2,8 @@
   /* Palette: Deep Shelf */
   --color-bg: #f0eeea;
   --color-text: #2a3a2e;
-  --color-text-secondary: #5a6658;
-  --color-accent: #7a8a6a;
+  --color-text-secondary: #475545;
+  --color-accent: #5f6f52;
   --color-border: #d5d2ca;
   --color-border-light: #e8e5de;
 
